tests/scripts/type_errors/field_does_not_exist.roto
struct Foo { a: u32 }

fn foo() {
    let foo = Foo { a: 8 };
    let a = foo.b;
}
